tests/core/positive/control/if_else_while.vais
F main() -> i64 {
    n: i64 := mut 0
    sum: i64 := mut 0
    LW n < 5 {
        sum = sum + n
        n = n + 1
    }
    chosen: i64 := I sum == 10 { 7 } EL { 9 }
    I chosen != 7 { R 1 }
    R 0
}
