tests/core/negative/types/return_bool_as_i64.vais
F main() -> i64 {
    R true
}
